--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ header img {
     margin-top: 10px;
 }
 
+label   {
+    color: white;
+    margin-right: 5px;
+}
+
 .cds-container {
     display: flex;
     justify-content: center;
